# BimaGrid

./: .env.example  .gitignore  Kenya_counties_subcounties_constituencies_wards.json  Kenya_counties_subcounties_constituencies_wards.sql  Qwen__20260701_hppna9hxk.txt  Qwen__20260701_qmn07zo4o.txt  Qwen__20260701_yyjrwq4zi.txt  README (1).md  README.md  README.txt  bimagrid_apis_protocals  bimagrid_apis_protocals.md  bimagrid_apis_protocals.txt  bimagrid_tech_stack.md  bimagrid_tech_stack.txt  bimagrid_workflow_project_structure.md  bimagrid_workflow_project_structure.txt  db.sqlite3  docker-compose.prod.yml  docker-compose.yml  file.txt  files.txt  status.txt  test_grpc.py
backend/: Dockerfile  Kenya_counties_subcounties_constituencies_wards.json  manage.py  pyproject.toml  seed_agent.py  start.sh  test_curl.sh  test_quote.py  test_quote_api.py  test_quote_debug.py  test_quote_error.py  test_urls.py
backend/.bima/: pyvenv.cfg
backend/apps/: __init__.py
backend/config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
backend/fixtures/: initial_pricing_rules.json
backend/integrations/: __init__.py  africastalking.py  ardhisasa.py  blockchain.py  chirps.py  iprs.py  mpesa.py  nasa_power.py  openeo.py  resend_client.py
backend/logs/: .gitkeep
backend/middleware/: __init__.py  authentication.py  logging.py  rate_limiting.py
backend/requirements/: base.txt  development.txt  production.txt  testing.txt
backend/services/: __init__.py  notification_service.py  oracle_service.py  payment_service.py  policy_service.py  pricing_service.py
backend/tests/: conftest.py  factories.py  test_admin_dashboard.py  (+5 more)
oracle-node/: Cargo.toml  Dockerfile  build.rs  oracle-config-1.toml
(+479 files in other folders)
