[package]
name = "bimagrid-oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
ethers = { version = "2.0.7", features = ["rustls"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
chrono = { version = "0.4.26", features = ["serde"] }
toml = "0.7.5"
hex = "0.4.3"
rand = "0.8"
tonic = "0.9"
prost = "0.11"

[build-dependencies]
tonic-build = "0.9"
